--- a/stlyles.css
+++ b/stlyles.css
@@ -56,3 +56,8 @@ header{
     color: #000000;
     font-weight: 500;
 }
+.navbar a:hover{
+    color: #fff;
+    background: var(--main-color);
+    border-radius: 4px;
+}
