--- a/stlyles.css
+++ b/stlyles.css
@@ -52,7 +52,7 @@ header{
 }
 .navbar a{
     font-size: 1rem;
-    padding: 10px 20px;
+    padding: 15px 20px;
     color: #000000;
     font-weight: 500;
 }
@@ -60,4 +60,105 @@ header{
     color: #fff;
     background: var(--main-color);
     border-radius: 4px;
+}
+#menu-icon{
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 1001;
+    display: none;
+}
+.home{
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    background: url(img/Background\ –\ 1@2x.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    gap: 1rem;
+}
+.home-text{
+    flex: 1 1 17rem; 
+}
+.home-img{
+    flex: 1 1 17rem;
+}
+.home-text span{
+    font-size: 1rem;
+    text-transform: uppercase;
+    font-weight: 600;
+    color: var(--main-color);
+}
+.home-text h1{
+    font-size: 4rem;
+    color: var(--secondary-color);
+}
+.home-text p{
+    margin: 0.5rem 0 1.4rem;
+}
+.btn{
+    padding: 10px 20px;
+    border: 2px solid var(--main-color);
+    border-radius: 40px;
+    color: var(--main-color);
+    font-weight: 500;
+}
+.btn:hover{
+    letter-spacing: 2px;
+    color: #fff;
+    background: var(--main-color);
+}
+.about{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background: url(img/about-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.about h1{
+    color: #fff;
+    font-size: 2rem;
+    text-transform: uppercase;
+}
+.about-container{
+    background: #fff;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    border-radius: 10px;
+    border-top: 6px solid var(--main-color);
+    padding: 20px;
+    gap: 2rem;
+}
+.box-img{
+    width: 200px;
+    height: 200px;
+}
+.box-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
+}
+.about-box{
+    flex: 1 1 8rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+.about-box h3{
+    font-size: 1rem;
+    font-weight: 500;
+    color: var(--secondary-color);
+    margin: 0 0 0.5rem;
+}
+.about-box h2{
+    font-size: 1,2rem;
+    color: var(--main-color);
+    letter-spacing: 1px;
 }
