--- a/stlyles.css
+++ b/stlyles.css
@@ -12,7 +12,7 @@
 
 :root{
     --main-color: #16b978;
-    --secondary-color: #092b54;
+    --secondary-color: #081b54;
 }
 section{
     padding: 50px 10%;
@@ -38,7 +38,7 @@ header{
 }
 header.active{
     background: var(--secondary-color);
-    box-shadow: 0 0 4px rgb(14, 55, 54 / 15);
+    box-shadow: 0 0 4px rgb(14, 55, 54 / 15%);
 }header.active .logo{
     color: #fff;
 }
@@ -170,4 +170,69 @@ header.active .navbar a{
     font-size: 1,2rem;
     color: var(--main-color);
     letter-spacing: 1px;
+}
+.heading{
+    text-align: center;
+}
+.heading h2{
+    font-size: 2rem;
+    color: var(--secondary-color);
+    margin-bottom: 0.5rem;
+}
+.shop-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin-top: 2rem;
+}
+.shop-box{
+    position: relative;
+    flex: 1 1 17rem;
+    box-shadow: 0 4px 4px rgb(14, 55, 54 / 15%);
+    border-radius: 0.5rem;
+    height: auto;
+}
+.shop-img{
+    width: 100%;
+    height: 300px;
+    border-radius: 0.5rem;
+    overflow: hidden;
+}
+.shop-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+.shop-img img:hover {
+    transform: scale(1.1);
+    transition: 0.5s;
+}
+.shop-box h3{
+    font-size: 1rem;
+    font-weight: 500;
+    color: var(--secondary-color);
+    padding: 10px;
+}
+.shop-box h2{
+    font-size: 1.2rem;
+    color: var(--main-color);
+    letter-spacing: 1px;
+    padding: 10px;
+}
+.shop-box .bxs-cart-add{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    font-size: 20px;
+    padding: 10px;
+    color: #fff;
+    background: var(--main-color);
+    border-radius: 4px 0 4px;
+}
+.shop-box .bxs-cart-add:hover{
+    background: var(--secondary-color);
+    cursor: pointer;
 }
