--- a/stlyles.css
+++ b/stlyles.css
@@ -38,7 +38,7 @@ header{
 }
 header.active{
     background: var(--secondary-color);
-    box-shadow: 0 0 4px rgb(14, 55, 54 / 15%);
+    box-shadow: 0 0 4px rgb(14 55 54 / 15%);
 }header.active .logo{
     color: #fff;
 }
@@ -179,7 +179,8 @@ header.active .navbar a{
     color: var(--secondary-color);
     margin-bottom: 0.5rem;
 }
-.shop-container{
+.shop-container, 
+.customer-container{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -190,11 +191,11 @@ header.active .navbar a{
 .shop-box{
     position: relative;
     flex: 1 1 17rem;
-    box-shadow: 0 4px 4px rgb(14, 55, 54 / 15%);
+    box-shadow: 0 4px 4px rgb(14 55 54 / 15%);
     border-radius: 0.5rem;
     height: auto;
 }
-.shop-img{
+.shop-img,{
     width: 100%;
     height: 300px;
     border-radius: 0.5rem;
@@ -235,4 +236,30 @@ header.active .navbar a{
 .shop-box .bxs-cart-add:hover{
     background: var(--secondary-color);
     cursor: pointer;
+}
+.customer-container .box{
+    flex: 1 1 16rem;
+    text-align: center;
+    box-shadow: 0px 4px 4px rgb(14 55 54 / 15%);
+    padding: 20px;
+    border-radius: 0.5rem;
+}
+.box img{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 2px solid var(--secondary-color);
+}
+.box .bx{
+    color: var(--main-color);
+    margin-top: 0.5rem;
+}
+.box p{
+    margin: 0,5rem 0 1rem;
+}
+.box h2{
+    font-size: 1.2rem;
+    color: var(--main-color);
+    letter-spacing: 1px;
 }
