--- a/stlyles.css
+++ b/stlyles.css
@@ -195,7 +195,7 @@ header.active .navbar a{
     border-radius: 0.5rem;
     height: auto;
 }
-.shop-img,{
+.shop-img{
     width: 100%;
     height: 300px;
     border-radius: 0.5rem;
