--- a/stlyles.css
+++ b/stlyles.css
@@ -263,3 +263,18 @@ header.active .navbar a{
     color: var(--main-color);
     letter-spacing: 1px;
 }
+.contact-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 2rem;
+}
+.container-info{
+    flex: 1 1 20rem;
+}
+.contact-form{
+    flex: 1 1 20rem;
+    display: flex;
+    justify-content: center;
+}
