added some stylying to the adress, contact form, social
also made changes to the div housing the adress class

--- a/stlyles.css
+++ b/stlyles.css
@@ -270,11 +270,77 @@ header.active .navbar a{
     gap: 1rem;
     margin-top: 2rem;
 }
-.container-info{
+.contact-info{
     flex: 1 1 20rem;
 }
 .contact-form{
     flex: 1 1 20rem;
     display: flex;
     justify-content: center;
+}
+.contact-info h2{
+    font-size: 1.7rem;
+    color: var(--secondary-color)
+}
+.contact-info p{
+    margin: 0.5rem 0 1rem;
+}
+.adress{
+    display: flex;
+    flex-direction: column;
+}
+.adress i{
+    display: flex;
+    align-items: center;
+    margin-bottom: 0.5rem;
+    font-size: 20px;
+}
+.adress span{
+    font-size: 1rem;
+    margin-left: 1rem;
+}
+.social{
+    margin-top: 1rem;
+}
+.social a{
+    font-size: 24px;
+    color: var(--main-color);
+    margin-right: 1rem;
+}
+.social a:hover{
+    color: var(--secondary-color);
+}
+.contact-form form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+form input, 
+textarea{
+    width: 100%;
+    padding: 17px;
+    border-radius: 0.5rem;
+    outline: none;
+    margin-bottom: 1rem;
+    border: 2px solid var(--main-color);
+    box-shadow: 0 4px 4px 2px rgb(14 55 54 / 15%);
+}
+form input::placeholder, 
+textarea::placeholder{
+    color: var(--main-color);
+}
+form textarea{
+    resize: none;
+    height: 150px;
+}
+form .btn{
+    max-width: 100px;
+    background: var(--main-color);
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: bold;
+    border: none;
+}
+form .btn:hover{
+    background: var(--secondary-color);
 }
