--- a/stlyles.css
+++ b/stlyles.css
@@ -179,6 +179,9 @@ header.active .navbar a{
     color: var(--secondary-color);
     margin-bottom: 0.5rem;
 }
+.heading p{
+    padding-inline: 20px;
+}
 .shop-container, 
 .customer-container{
     display: flex;
@@ -343,4 +346,75 @@ form .btn{
 }
 form .btn:hover{
     background: var(--secondary-color);
+}
+.copyright{
+    padding: 20px;
+    text-align: center;
+}
+@media (max-width: 1100px){
+    .home-text h1{
+        font-size: 3rem;
+    }
+}
+@media (max-width: 991px){
+    header {
+        padding: 18px 4%;
+    }
+    section{
+        padding: 50px 4%;
+    }
+}
+@media (max-width: 991px){
+    header {
+        padding: 11px 4%;
+    }
+    #menu-icon{
+        display: initial;
+    }
+    header.active #menu-icon{
+        color:#fff;
+    }
+    header .navbar{
+        position:absolute;
+        top: -500px;
+        left: 0;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        background: var(--secondary-color);
+        box-shadow: 0 4px 4px rgb(14 55 54 / 15%);
+        transition: 0.2s ease;
+        text-align: right;
+    }
+    .navbar.active{
+        top: 100%;
+    }
+    .navbar a{
+        padding: 1.5rem;
+        display: block;
+        color: #fff;
+    }
+    .home-text h1{
+        font-size: 2.4rem;
+    }
+    .about h1{
+        font-size: 2rem;
+    }
+    .heading h2{
+        font-size: 1.6rem;
+    }
+    .contact-info h2{
+        font-size: 1.6rem;
+    }
+}
+@media(max-width:360px){
+    .home-text span{
+        font-size: 0.8rem;
+    }
+    .home-text h1{
+        font-size: 2rem;
+    }
+    .home-text p{
+        font-size: 0.9rem;
+    }
 }
